# keebler-llm

./: .env.template  Makefile  README.md  pyproject.toml
apps/nbs/datasets/: dataset_finance.ipynb
apps/nbs/embeddings/: emb_integrations.ipynb
config/: logging.yaml
config/experimentation/: experiment.yaml
config/runtimes/: python.env
environment/dependencies/: requirements.txt  requirements_ui.txt
environment/dependencies/modalities/: requirements_llm.txt
environment/dependencies/providers/: requirements_openai.txt  requirements_wandb.txt
examples/: experiment_launcher.py
keebler_llm/: __init__.py  version.py
keebler_llm/core/: __init__.py  experiment.py  utils.py
keebler_llm/core/eval/: outliers.py  profiler.py
keebler_llm/core/io/: reader.py  utils.py
keebler_llm/core/services/: rest.py
keebler_llm/core/transforms/: processors.py
keebler_llm/datasets/: dataset.py
keebler_llm/datasets/builtin/finance/: yahoo.py
keebler_llm/datasets/vision/: dataset.py
keebler_llm/infra/: trace.py
keebler_llm/integrations/huggingface/: tasks.py
keebler_llm/integrations/langchain/: reader.py
keebler_llm/integrations/openai/: api.py  encoding.py  service.py
keebler_llm/integrations/sentencetransformers/: encoder.py
keebler_llm/integrations/sklearn/: encoders.py  workflow.py
keebler_llm/integrations/torch/: metrics.py  utils.py
